# sylver-cli

./: Cargo.toml  LICENSE.txt  Makefile.toml  README.md  rustfmt.toml
crates/sylver-cli/: Cargo.toml
crates/sylver-cli/src/: check.rs  cli.rs  main.rs  parse.rs  query.rs  ruleset.rs  shared.rs  upload.rs
crates/sylver-cli/src/init/: detect.rs  mod.rs
crates/sylver-cli/src/repl/: cache.rs  mod.rs
crates/sylver-cli/test_res/json_variables/: invalid_config.json  ruleset.yaml  sylver.yaml  valid_config.json
crates/sylver-cli/test_res/outputs/check/: invalid_config_output  invalid_config_output_min_level_error
crates/sylver-cli/tests/: check.rs
crates/sylver-core/: Cargo.toml
crates/sylver-core/benches/: bench_main.rs
crates/sylver-core/benches/benchmarks/: parser.rs
crates/sylver-core/res/aspects/: python.py
crates/sylver-core/res/detection_scripts/: javascript.py  python.py  yaml.py
crates/sylver-core/res/ts_mappings/: javascript.yaml  python.yaml  yaml.yaml
crates/sylver-core/src/: api.rs  lib.rs  report.rs
crates/sylver-core/src/builtin_langs/: mod.rs  parser.rs
crates/sylver-core/src/core/: files_spec.rs  mod.rs  pos.rs  source.rs  spec.rs
crates/sylver-core/src/dashboard/: api.rs
crates/sylver-core/src/land/: builder.rs  mod.rs  ruleset.rs  sylva.rs
crates/sylver-core/src/land/cmds/: mod.rs  rules.rs
crates/sylver-core/src/parsing/: grammar.rs  lexer_regex.rs  mod.rs  parser.rs  parser_runner.rs  scanner.rs  sppf.rs  sppf_conv.rs  table.rs
crates/sylver-core/src/pretty_print/: mod.rs  report.rs  tree.rs
crates/sylver-core/src/query/: expr.rs  mod.rs
crates/sylver-core/src/query/language/: compile.rs  sylq.pest
crates/sylver-core/src/script/: mod.rs
crates/sylver-core/src/script/python/: mod.rs  script_node.rs  script_sg.rs  stdlib.rs
crates/sylver-core/src/semantic/: names.rs
crates/sylver-core/src/specs/: loader.rs  mod.rs
crates/sylver-core/src/specs/stem/: language.rs  location.rs  mod.rs  project.rs  ruleset.rs
crates/sylver-core/src/state/: mod.rs
crates/sylver-core/src/tree/: info.rs  mod.rs
crates/sylver-core/src/tree/info/: raw.rs
crates/sylver-core/src/util/: archive.rs  debug.rs  depth_iter.rs  fs.rs  git.rs  intern_map.rs  iter.rs  macros.rs  mod.rs  once.rs  test.rs
crates/sylver-core/test_res/specs/: binop.syl  scratch.syl
crates/sylver-core/test_res/specs/golang/: golang.syl
crates/sylver-core/test_res/specs/golang/parser_tests/single_positive/: append.go  append.output  array.go  array.output  basic-types.go  basic-types.output  buffered-channels.go  buffered-channels.output  channels.go  channels.output  constants.go  constants.output  default-select.output  defer-multi.go  defer-multi.output  defer.go  defer.output  empty-interface.output  for-continued.go  for-is-go-s-while.go  for-is-go-s-while.output  for.output  forever.output  funcs.go  funcs.output  function-closures.output  function-values.go  function-values.output  general-interfaces.go  general-interfaces.output  goroutines.output  if-and-else.output  if.go  if.output  (+76 more)
crates/sylver-core/test_res/specs/json/: json.syl
crates/sylver-core/test_res/specs/json/benches/: pass.json
crates/sylver-core/test_res/sylq_eval/cmp_ops/: eqeq_node_text_coersion.output  eqeq_node_text_coersion.sylq  neq_node_text_coersion.output  neq_node_text_coersion.sylq  spec.syl
crates/sylver-core/test_res/sylq_eval/cmp_ops/src/: input
crates/sylver-core/test_res/sylq_eval/list_length/: list_indexing.output  list_indexing.sylq  list_quantified.output  list_quantified.sylq  list_with_len.output  list_with_len.sylq  node_indexing.sylq  spec.syl
crates/sylver-core/test_res/sylq_eval/list_length/src/: input1
crates/sylver-core/test_res/sylq_eval/null_safety/: match_null_node_in_nested_pattern.output  match_null_node_in_nested_pattern.sylq  spec.syl
crates/sylver-core/test_res/sylq_eval/null_safety/src/: input
crates/sylver-core/test_res/sylq_eval/quantifiers/: all_quant.output  all_quant.sylq  any_quant.output  any_quant.sylq  no_quant.output  no_quant.sylq  spec.syl
crates/sylver-core/test_res/sylq_eval/quantifiers/src/: input1
crates/sylver-core/tests/: parser.rs  sylq_eval.rs
crates/sylver-dsl/: Cargo.toml
crates/sylver-dsl/src/: lib.rs  test.rs  util.rs
crates/sylver-dsl/src/meta/: ast.rs  meta.pest  mod.rs
crates/sylver-dsl/src/sylq/: ast.rs  mod.rs  sylq.pest
crates/sylver-script/: Cargo.toml
crates/sylver-script/src/: lib.rs  python.rs
crates/sylver-script/src/python/: mod.rs  script_node.rs  script_sg.rs  stdlib.rs
(+15 files in other folders)
