[package]
name = "sylver-core"
version = "0.1.0"
authors = ["Geoffrey Copin <copin.geoffrey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
thiserror = "1.0.19"
id-vec = "0.5.7"
maplit = "1.0.2"
petgraph = "0.6.*"
derive_more = "0.99.*"
non-empty-vec = "0.2.0"
itertools = "0.10.3"
rustc-hash = "1.1.0"
smallvec = { version = "1.8.0", features = ["const_generics"] }
codespan-reporting = "0.11.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
rayon = "1.5.3"
glob = "0.3.0"
log = { path = "../log" }
url = "2.3.1"
fancy-regex = "0.10.0"
once_cell = "1.16.0"
tree-sitter = "0.20.9"
sylver-langs = { path = "../sylver-langs" }
sylver-dsl = { path = "../sylver-dsl" }
semver = "1.0.16"
zip = "0.6.3"
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "rustls-tls"] }
derivative = "2.2.0"

[dev-dependencies]
criterion = "0.4.0"
glob = "0.3.0"
indoc = "1.0.3"
once_cell = "1.13.1"
temp-dir = "0.1.11"
test-generator = "0.3.0"

[[bench]]
name = "bench_main"
harness = false
