[package]
name = "sylver-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "59b191c" }
rustpython-codegen = { git = "https://github.com/RustPython/RustPython", rev = "59b191c" }
rustpython-parser = { git = "https://github.com/RustPython/RustPython", rev = "59b191c" }

thiserror = "1.0.38"
num-bigint = "0.4.3"
derive_more = "0.99.17"
serde_yaml = "0.9.17"
maplit = "1.0.2"
fancy-regex = "0.11.0"
